--- a/Qt/dark.qss
+++ b/Qt/dark.qss
@@ -86,6 +86,7 @@ QCheckBox:disabled
 QGroupBox::indicator
 {
     margin-left: 0.2ex;
+    margin-left: 0.2ex;
 }
 
 QCheckBox::indicator:unchecked,
@@ -395,7 +396,7 @@ QScrollBar::handle:horizontal
 
 QScrollBar::add-line:horizontal
 {
-    margin: 0px 0.3ex 0px 0.3ex;
+    margin: 0ex 0.3ex 0ex 0.3ex;
     border-image: url(:/dark/right_arrow_disabled.png);
     width: 1ex;
     height: 1ex;
@@ -505,13 +506,15 @@ QScrollBar::add-line:vertical:on
     subcontrol-origin: margin;
 }
 
-QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical
+QScrollBar::up-arrow:vertical, 
+QScrollBar::down-arrow:vertical
 {
     background: none;
 }
 
 
-QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical
+QScrollBar::add-page:vertical, 
+QScrollBar::sub-page:vertical
 {
     background: none;
 }
@@ -873,6 +876,8 @@ QTabBar:focus
 QTabBar::close-button
 {
     border-image: url(:/dark/close.png);
+    width: 1.2ex;
+    height: 1.2ex;    
     background: transparent;
 }
 
@@ -901,7 +906,7 @@ QTabBar::tab:top
     border-top: 0.1ex solid #76797c;
     background-color: #31363b;
     padding: 0.5ex;
-    min-width: 50px;
+    min-width: 5ex;
     border-top-left-radius: 0.2ex;
     border-top-right-radius: 0.2ex;
 }
@@ -916,7 +921,7 @@ QTabBar::tab:top:only-one
     border-top: 0.1ex solid #76797c;
     background-color: #31363b;
     padding: 0.5ex;
-    min-width: 50px;
+    min-width: 5ex;
     border-top-left-radius: 0.2ex;
     border-top-right-radius: 0.2ex;
 }
@@ -942,19 +947,18 @@ QTabBar::tab:top:first:!selected
 
 QTabBar::tab:top:!selected:hover
 {
-    background-color: rgba(61, 173, 232, 0.2);
-    border: 0.1ex rgba(61, 173, 232, 0.2);
+    background-color: rgba(61, 173, 232, 0.1);
+    border: 0.1ex rgba(61, 173, 232, 0.1);
     border-left: 0.1ex solid #76797c;
 }
 
 QTabBar::tab:top:!selected:first:hover
 {
-    background-color: rgba(61, 173, 232, 0.2);
-    border: 0.1ex rgba(61, 173, 232, 0.2);
+    background-color: rgba(61, 173, 232, 0.1);
+    border: 0.1ex rgba(61, 173, 232, 0.1);
 }
 
 /* BOTTOM TABS */
-
 QTabBar::tab:bottom
 {
     color: #eff0f1;
@@ -965,7 +969,7 @@ QTabBar::tab:bottom
     padding: 0.5ex;
     border-bottom-left-radius: 0.2ex;
     border-bottom-right-radius: 0.2ex;
-    min-width: 50px;
+    min-width: 5ex;
 }
 
 QTabBar::tab:bottom:last,
@@ -998,21 +1002,21 @@ QTabBar::tab:bottom:first:!selected
     color: #eff0f1;
     background-color: #54575B;
     border: 0.1ex transparent black;
-    border-top-left-radius: 0.2ex;
-    border-top-right-radius: 0.2ex;
+    border-bottom-left-radius: 0.2ex;
+    border-bottom-right-radius: 0.2ex;
 }
 
 QTabBar::tab:bottom:!selected:hover
 {
-    background-color: rgba(61, 173, 232, 0.2);
-    border: 0.1ex rgba(61, 173, 232, 0.2);
+    background-color: rgba(61, 173, 232, 0.1);
+    border: 0.1ex rgba(61, 173, 232, 0.1);
     border-left: 0.1ex solid #76797c;
 }
 
 QTabBar::tab:bottom:!selected:first:hover
 {
-    background-color: rgba(61, 173, 232, 0.2);
-    border: 0.1ex rgba(61, 173, 232, 0.2);
+    background-color: rgba(61, 173, 232, 0.1);
+    border: 0.1ex rgba(61, 173, 232, 0.1);
 }
 
 /* LEFT TABS */
@@ -1026,7 +1030,7 @@ QTabBar::tab:left
     padding: 0.5ex;
     border-top-right-radius: 0.2ex;
     border-bottom-right-radius: 0.2ex;
-    min-height: 50px;
+    min-height: 5ex;
 }
 
 QTabBar::tab:left:last,
@@ -1041,7 +1045,7 @@ QTabBar::tab:left:only-one
     padding: 0.5ex;
     border-top-right-radius: 0.2ex;
     border-bottom-right-radius: 0.2ex;
-    min-height: 50px;
+    min-height: 5ex;
 }
 
 QTabBar::tab:left:!selected
@@ -1056,15 +1060,15 @@ QTabBar::tab:left:!selected
 
 QTabBar::tab:left:!selected:hover
 {
-    background-color: rgba(61, 173, 232, 0.2);
-    border: 0.1ex rgba(61, 173, 232, 0.2);
+    background-color: rgba(61, 173, 232, 0.1);
+    border: 0.1ex rgba(61, 173, 232, 0.1);
     border-top: 0.1ex solid #76797c;
 }
 
 QTabBar::tab:left:!selected:first:hover
 {
-    background-color: rgba(61, 173, 232, 0.2);
-    border: 0.1ex rgba(61, 173, 232, 0.2);
+    background-color: rgba(61, 173, 232, 0.1);
+    border: 0.1ex rgba(61, 173, 232, 0.1);
 }
 
 /* RIGHT TABS */
@@ -1078,7 +1082,7 @@ QTabBar::tab:right
     padding: 0.5ex;
     border-top-left-radius: 0.2ex;
     border-bottom-left-radius: 0.2ex;
-    min-height: 50px;
+    min-height: 5ex;
 }
 
 QTabBar::tab:right:last,
@@ -1093,7 +1097,7 @@ QTabBar::tab:right:only-one
     padding: 0.5ex;
     border-top-left-radius: 0.2ex;
     border-bottom-left-radius: 0.2ex;
-    min-height: 50px;
+    min-height: 5ex;
 }
 
 QTabBar::tab:right:!selected
@@ -1108,15 +1112,15 @@ QTabBar::tab:right:!selected
 
 QTabBar::tab:right:!selected:hover
 {
-    background-color: rgba(61, 173, 232, 0.2);
-    border: 0.1ex rgba(61, 173, 232, 0.2);
+    background-color: rgba(61, 173, 232, 0.1);
+    border: 0.1ex rgba(61, 173, 232, 0.1);
     border-top: 0.1ex solid #76797c;
 }
 
 QTabBar::tab:right:!selected:first:hover
 {
-    background-color: rgba(61, 173, 232, 0.2);
-    border: 0.1ex rgba(61, 173, 232, 0.2);
+    background-color: rgba(61, 173, 232, 0.1);
+    border: 0.1ex rgba(61, 173, 232, 0.1);
 }
 
 QTabBar QToolButton::right-arrow:enabled
@@ -1269,7 +1273,7 @@ QSlider::groove:horizontal
     border: 0.1ex solid #31363b;
     height: 0.4ex;
     background: #565a5e;
-    margin: 0ex;
+    margin: 0px;
     border-radius: 0.2ex;
 }
 
