--- a/Qt/dark.qss
+++ b/Qt/dark.qss
@@ -86,7 +86,6 @@ QCheckBox:disabled
 QGroupBox::indicator
 {
     margin-left: 0.2ex;
-    margin-left: 0.2ex;
 }
 
 QCheckBox::indicator:unchecked,
@@ -396,7 +395,7 @@ QScrollBar::handle:horizontal
 
 QScrollBar::add-line:horizontal
 {
-    margin: 0ex 0.3ex 0ex 0.3ex;
+    margin: 0px 0.3ex 0px 0.3ex;
     border-image: url(:/dark/right_arrow_disabled.png);
     width: 1ex;
     height: 1ex;
@@ -506,15 +505,13 @@ QScrollBar::add-line:vertical:on
     subcontrol-origin: margin;
 }
 
-QScrollBar::up-arrow:vertical, 
-QScrollBar::down-arrow:vertical
+QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical
 {
     background: none;
 }
 
 
-QScrollBar::add-page:vertical, 
-QScrollBar::sub-page:vertical
+QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical
 {
     background: none;
 }
@@ -876,8 +873,6 @@ QTabBar:focus
 QTabBar::close-button
 {
     border-image: url(:/dark/close.png);
-    width: 1.2ex;
-    height: 1.2ex;    
     background: transparent;
 }
 
@@ -906,7 +901,7 @@ QTabBar::tab:top
     border-top: 0.1ex solid #76797c;
     background-color: #31363b;
     padding: 0.5ex;
-    min-width: 5ex;
+    min-width: 50px;
     border-top-left-radius: 0.2ex;
     border-top-right-radius: 0.2ex;
 }
@@ -921,7 +916,7 @@ QTabBar::tab:top:only-one
     border-top: 0.1ex solid #76797c;
     background-color: #31363b;
     padding: 0.5ex;
-    min-width: 5ex;
+    min-width: 50px;
     border-top-left-radius: 0.2ex;
     border-top-right-radius: 0.2ex;
 }
@@ -947,18 +942,19 @@ QTabBar::tab:top:first:!selected
 
 QTabBar::tab:top:!selected:hover
 {
-    background-color: rgba(61, 173, 232, 0.1);
-    border: 0.1ex rgba(61, 173, 232, 0.1);
+    background-color: rgba(61, 173, 232, 0.2);
+    border: 0.1ex rgba(61, 173, 232, 0.2);
     border-left: 0.1ex solid #76797c;
 }
 
 QTabBar::tab:top:!selected:first:hover
 {
-    background-color: rgba(61, 173, 232, 0.1);
-    border: 0.1ex rgba(61, 173, 232, 0.1);
+    background-color: rgba(61, 173, 232, 0.2);
+    border: 0.1ex rgba(61, 173, 232, 0.2);
 }
 
 /* BOTTOM TABS */
+
 QTabBar::tab:bottom
 {
     color: #eff0f1;
@@ -969,7 +965,7 @@ QTabBar::tab:bottom
     padding: 0.5ex;
     border-bottom-left-radius: 0.2ex;
     border-bottom-right-radius: 0.2ex;
-    min-width: 5ex;
+    min-width: 50px;
 }
 
 QTabBar::tab:bottom:last,
@@ -1002,21 +998,21 @@ QTabBar::tab:bottom:first:!selected
     color: #eff0f1;
     background-color: #54575B;
     border: 0.1ex transparent black;
-    border-bottom-left-radius: 0.2ex;
-    border-bottom-right-radius: 0.2ex;
+    border-top-left-radius: 0.2ex;
+    border-top-right-radius: 0.2ex;
 }
 
 QTabBar::tab:bottom:!selected:hover
 {
-    background-color: rgba(61, 173, 232, 0.1);
-    border: 0.1ex rgba(61, 173, 232, 0.1);
+    background-color: rgba(61, 173, 232, 0.2);
+    border: 0.1ex rgba(61, 173, 232, 0.2);
     border-left: 0.1ex solid #76797c;
 }
 
 QTabBar::tab:bottom:!selected:first:hover
 {
-    background-color: rgba(61, 173, 232, 0.1);
-    border: 0.1ex rgba(61, 173, 232, 0.1);
+    background-color: rgba(61, 173, 232, 0.2);
+    border: 0.1ex rgba(61, 173, 232, 0.2);
 }
 
 /* LEFT TABS */
@@ -1030,7 +1026,7 @@ QTabBar::tab:left
     padding: 0.5ex;
     border-top-right-radius: 0.2ex;
     border-bottom-right-radius: 0.2ex;
-    min-height: 5ex;
+    min-height: 50px;
 }
 
 QTabBar::tab:left:last,
@@ -1045,7 +1041,7 @@ QTabBar::tab:left:only-one
     padding: 0.5ex;
     border-top-right-radius: 0.2ex;
     border-bottom-right-radius: 0.2ex;
-    min-height: 5ex;
+    min-height: 50px;
 }
 
 QTabBar::tab:left:!selected
@@ -1060,15 +1056,15 @@ QTabBar::tab:left:!selected
 
 QTabBar::tab:left:!selected:hover
 {
-    background-color: rgba(61, 173, 232, 0.1);
-    border: 0.1ex rgba(61, 173, 232, 0.1);
+    background-color: rgba(61, 173, 232, 0.2);
+    border: 0.1ex rgba(61, 173, 232, 0.2);
     border-top: 0.1ex solid #76797c;
 }
 
 QTabBar::tab:left:!selected:first:hover
 {
-    background-color: rgba(61, 173, 232, 0.1);
-    border: 0.1ex rgba(61, 173, 232, 0.1);
+    background-color: rgba(61, 173, 232, 0.2);
+    border: 0.1ex rgba(61, 173, 232, 0.2);
 }
 
 /* RIGHT TABS */
@@ -1082,7 +1078,7 @@ QTabBar::tab:right
     padding: 0.5ex;
     border-top-left-radius: 0.2ex;
     border-bottom-left-radius: 0.2ex;
-    min-height: 5ex;
+    min-height: 50px;
 }
 
 QTabBar::tab:right:last,
@@ -1097,7 +1093,7 @@ QTabBar::tab:right:only-one
     padding: 0.5ex;
     border-top-left-radius: 0.2ex;
     border-bottom-left-radius: 0.2ex;
-    min-height: 5ex;
+    min-height: 50px;
 }
 
 QTabBar::tab:right:!selected
@@ -1112,15 +1108,15 @@ QTabBar::tab:right:!selected
 
 QTabBar::tab:right:!selected:hover
 {
-    background-color: rgba(61, 173, 232, 0.1);
-    border: 0.1ex rgba(61, 173, 232, 0.1);
+    background-color: rgba(61, 173, 232, 0.2);
+    border: 0.1ex rgba(61, 173, 232, 0.2);
     border-top: 0.1ex solid #76797c;
 }
 
 QTabBar::tab:right:!selected:first:hover
 {
-    background-color: rgba(61, 173, 232, 0.1);
-    border: 0.1ex rgba(61, 173, 232, 0.1);
+    background-color: rgba(61, 173, 232, 0.2);
+    border: 0.1ex rgba(61, 173, 232, 0.2);
 }
 
 QTabBar QToolButton::right-arrow:enabled
@@ -1273,7 +1269,7 @@ QSlider::groove:horizontal
     border: 0.1ex solid #31363b;
     height: 0.4ex;
     background: #565a5e;
-    margin: 0px;
+    margin: 0ex;
     border-radius: 0.2ex;
 }
 
